--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,6 +6,7 @@ html {
   padding: 0;
   margin: 0;
 }
+
 body {
   margin-bottom: 200px;
   min-height: 100%;
@@ -14,8 +15,17 @@ body {
 #main {
   margin-bottom: 10em;
   min-height: 100%;
-  padding-top:5em
+  padding-top: 5em
 }
+
+nav {
+
+  background-color: #e3f2fd;
+}
+
+/*#header{*/
+  /*height: 70px;*/
+/*}*/
 
 .footer {
   border-top: 1px solid #e5e5e5;
