--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
+<div class="container-fluid">
 <div class="jumbotron">
   <h1>Hello,{{userName}}!</h1>
   <p><a class="btn btn-primary btn-lg" href="javascript:void(0)">马上体验</a></p>
 </div>
 
-
+</div>
 
