--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,4 +1,5 @@
-<div class="manager">
+<div class="container-fluid">
+  <div class="row justify-content-between">
   <!-- 左侧边栏导航开始 -->
   <div class="sidebar">
 
@@ -20,7 +21,7 @@
 
         <li>
           <a href="javascript:void(0)" [routerLink]="['/manager/updUser']">
-            <i class="fa fa-desktop"></i>
+            <i class="fa fa-users"></i>
             <span class="nav-text">
               用户管理
             </span>
@@ -38,13 +39,14 @@
             <span class="nav-text">
               <label for="item_total" class="checkbox_label">试题管理</label>
             </span>
+            <i class="fa fa-angle-right"></i>
           </a>
         </li>
 
 
         <li class="item_son">
           <a href="javascript:void(0)" [routerLink]="['/manager/addExam']">
-            <i class="fa fa-clock-o"></i>
+            <i class="fa fa-circle-o"></i>
             <span class="nav-text">
               新增试题
             </span>
@@ -53,7 +55,7 @@
 
         <li class="item_son">
           <a href="javascript:void(0)" [routerLink]="['/manager/updExam']">
-            <i class="fa fa-desktop"></i>
+            <i class="fa fa-circle-o"></i>
             <span class="nav-text">
               编辑试题
             </span>
@@ -72,4 +74,5 @@
   <div class="content">
     <router-outlet></router-outlet>
   </div>
+</div>
 </div>
