--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -1,6 +1,7 @@
 <!--modal-->
-<div *ngIf="isScoreModalShown" [config]="{ show: true }" (onHidden)="initHidden()" bsModal #scoreModal="bs-modal" class="modal fade"
-  tabindex="-1" role="dialog" aria-hidden="true">
+<div *ngIf="isScoreModalShown" [config]="{ show: true }" (onHidden)="initHidden()" bsModal #scoreModal="bs-modal"
+     class="modal fade"
+     tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-header">
@@ -21,75 +22,85 @@
 </div>
 
 
+<div class="container-fluid">
 
+  <!--试题列表-->
+  <div class="row justify-content-md-center" [@flyIn]="'active'">
+    <div id="unitexam_container" class="col-5" appScrollPage scrollPerecnt="70"
+         [immediateCallback]="false"
+         [scrollCallback]="scrollCallback">
+      <!--此标签只作为逻辑工具使用;渲染之后不改变原有结构-->
+      <ng-container *ngFor="let data of Listdata;let i = index">
+        <div class="card mb-3" [ngClass]="{'bg-danger': reviewErrList(data.id),'bg-warning':reviewNotDoList(i)}">
+          <!--一个标签内[ngClass]不可以写多个,如果需要多个,将方法写在一个[ngClass]内-->
+          <div class="card-header">
+            第{{i+1}}题.{{data.testStem}}
+          </div>
+          <div class="card-body">
+            <ul class="list" style="margin:0;padding:0;list-style:none">
+              <li *ngFor="let options of data.cpaOptionDtos;let k = index">
+                <input class="magic-radio" type="radio" [(ngModel)]="pAnswers[i]"
+                       value="{{data.id}}-{{options.selectData}}" (click)="showMsg()"
+                       name="optionsRadio{{i}}" id="optionsRadio{{i}}{{k}}"/>
+                <label for="optionsRadio{{i}}{{k}}">{{options.selectData}}.{{options.optionData}}</label>
+              </li>
+              <li style="text-align:right">
+                <i class="fa fa-comment-o fa-fw" style="cursor:pointer" aria-hidden="true"
+                   (click)="toggleCommentwindow(i,data.id)"></i>
+                <i class="fa fa-heart-o fa-fw" style="cursor:pointer" [ngClass]="{'fa fa-heart fa-fw':collectIndexs[i]}"
+                   aria-hidden="true"
+                   (click)="toggleCollect(i,data.id)"></i>
+              </li>
+            </ul>
+            <form role="form" style="text-align:right" *ngIf="commentIndexs[i]" #commentForm="ngForm">
+              <div class="form-group">
+              <textarea name="commentContent" #comment="ngModel" [(ngModel)]="commentContent[i]" style="resize:none;"
+                        class="form-control"
+                        rows="3" placeholder="请输入评论内容..." required [maxlength]="200"></textarea>
+              </div>
+              <button type="button" [disabled]="!commentForm.form.valid" class="btn btn-info btn-xs"
+                      (click)="commentItem(i,data.id,comment.value)">发布评论
+              </button>
 
-<!--试题列表-->
-<div class="row" [@flyIn]="'active'">
-  <div id="unitexam_container" class="col-md-5 col-md-offset-1" appScrollPage scrollPerecnt="70" [immediateCallback]="false"
-    [scrollCallback]="scrollCallback">
-    <!--此标签只作为逻辑工具使用;渲染之后不改变原有结构-->
-    <ng-container *ngFor="let data of Listdata;let i = index">
-      <div class="card mb-3" [ngClass]="{'bg-danger': reviewErrList(data.id),'bg-warning':reviewNotDoList(i)}">
-        <!--一个标签内[ngClass]不可以写多个,如果需要多个,将方法写在一个[ngClass]内-->
-        <div class="card-header">
-          第{{i+1}}题.{{data.testStem}}
-        </div>
-        <div class="card-body">
-          <ul class="list" style="margin:0;padding:0;list-style:none">
-            <li *ngFor="let options of data.cpaOptionDtos;let k = index">
-              <input class="magic-radio" type="radio" [(ngModel)]="pAnswers[i]" value="{{data.id}}-{{options.selectData}}" (click)="showMsg()"
-                name="optionsRadio{{i}}" id="optionsRadio{{i}}{{k}}" />
-              <label for="optionsRadio{{i}}{{k}}">{{options.selectData}}.{{options.optionData}}</label>
-            </li>
-            <li style="text-align:right">
-              <i class="fa fa-comment-o fa-fw" style="cursor:pointer" aria-hidden="true" (click)="toggleCommentwindow(i,data.id)"></i>
-              <i class="fa fa-heart-o fa-fw" style="cursor:pointer" [ngClass]="{'fa fa-heart fa-fw':collectIndexs[i]}" aria-hidden="true"
-                (click)="toggleCollect(i,data.id)"></i>
-            </li>
-          </ul>
-          <form role="form" style="text-align:right" *ngIf="commentIndexs[i]" #commentForm="ngForm">
-            <div class="form-group">
-              <textarea name="commentContent" #comment="ngModel" [(ngModel)]="commentContent[i]" style="resize:none;" class="form-control"
-                rows="3" placeholder="请输入评论内容..." required [maxlength]="200"></textarea>
-            </div>
-            <button type="button" [disabled]="!commentForm.form.valid" class="btn btn-info btn-xs" (click)="commentItem(i,data.id,comment.value)">发布评论</button>
-
-          </form>
-          <div>
-            <a class="card-link" href="javascript:void(0)" (click)="getComment(i,data.id,i)" *ngIf="data.commentCount>0">共{{data.commentCount}}条评论</a>
-            <div *ngIf="commentContentIndexs[i]">
-              <!-- 显示评论内容(使用了BootStrap媒体对象列表) -->
-              <div class="media" *ngFor='let userComment of Listcomment[i]'>
-                <div class="media-left">
-                  <a href="javascript:void(0)">
-                    <img class="media-object" src="..." alt="...">
-                  </a>
-                  <b>{{userComment.username}}</b>
-                </div>
-                <div class="media-body">
-                  <h4 class="media-heading">{{userComment.commentDate | date : 'yyyy-MM-dd'}}</h4>
-                  {{userComment.comment}}
+            </form>
+            <div>
+              <a class="card-link" href="javascript:void(0)" (click)="getComment(i,data.id,i)"
+                 *ngIf="data.commentCount>0">共{{data.commentCount}}条评论</a>
+              <div *ngIf="commentContentIndexs[i]">
+                <!-- 显示评论内容(使用了BootStrap媒体对象列表) -->
+                <div class="media" *ngFor='let userComment of Listcomment[i]'>
+                  <div class="media-left">
+                    <a href="javascript:void(0)">
+                      <img class="media-object" src="..." alt="...">
+                    </a>
+                    <b>{{userComment.username}}</b>
+                  </div>
+                  <div class="media-body">
+                    <h4 class="media-heading">{{userComment.commentDate | date : 'yyyy-MM-dd'}}</h4>
+                    {{userComment.comment}}
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </ng-container>
+      </ng-container>
+    </div>
+
+    <div class="col-1 offset-1">
+      <!--这里是右侧动态加载的内容(计算器等)是子组件-->
+      <!-- 其中”pAnswers” 为父组件中的属性，[pAnswer] 为子组件的输入;在子组件中使用 @Input() pAnswer 来接受父组件传递的值 -->
+      <app-util [pAnswer]="pAnswers" [totleCount]="totleCount" [testType]="testType"
+                (childResult)="hitResult($event)"></app-util>
+    </div>
+
+
   </div>
-
-  <div class="col-md-4 col-md-offset-1">
-    <!--这里是右侧动态加载的内容(计算器等)是子组件-->
-    <!-- 其中”pAnswers” 为父组件中的属性，[pAnswer] 为子组件的输入;在子组件中使用 @Input() pAnswer 来接受父组件传递的值 -->
-    <app-util [pAnswer]="pAnswers" [totleCount]="totleCount" [testType]="testType" (childResult)="hitResult($event)"></app-util>
-  </div>
-
-
-
 </div>
 
-  <!--primeng Growl消息提示插件,旨在替代sweetalert2插件-->
-  <p-growl [(value)]="msgs"></p-growl>
+<!--primeng Growl消息提示插件,旨在替代sweetalert2插件-->
+<!--baseZIndex 设置该元素在Dom元素中的层级,life表示该元素显示多长时间-->
+<p-growl [(value)]="msgs" baseZIndex=100  life=3000></p-growl>
 
 <!-- 登陆窗口弹出层 -->
 <!-- 此变量须与组件内@ViewChild的值相同 -->
@@ -101,3 +112,4 @@
 <div class="demo" [el-loading]="is_loading" [text]="'拼命加载中'" [lock]="true" [full-screen]="true">
   <!-- <el-tag>加载中..</el-tag> -->
 </div>
+
