--- a/src/app/usercenter/usercenter.component.html
+++ b/src/app/usercenter/usercenter.component.html
@@ -1,115 +1,119 @@
-<div class="jumbotron">
-  <h3>看云的个人中心</h3>
+<div class="container-fluid">
+  <div class="jumbotron">
+    <h3>看云的个人中心</h3>
 
-  <ul class="nav nav-pills">
-    <li role="presentation" class="active">
-      <a href="javascript:void(0)">空间首页</a>
-    </li>
-    <li role="presentation">
-      <a href="javascript:void(0)">个人资料</a>
-    </li>
+    <ul class="nav nav-pills">
+      <li role="presentation" class="active">
+        <a href="javascript:void(0)">空间首页</a>
+      </li>
+      <li role="presentation">
+        <a href="javascript:void(0)">个人资料</a>
+      </li>
 
-  </ul>
-</div>
+    </ul>
+  </div>
 
-<div class="row">
-  <div class="col-sm-6 col-md-3">
-    <div class="card">
-      <div class="card-header">头像</div>
-      <img class="card-img-top" #headImg src="http://kanyun123.3vcm.net/touxiang.jpeg" alt="Card image cap">
-      <div class="card-body">
-        <a (click)="headModal.show()" href="javascript:void(0)" class="btn btn-primary">更换头像</a>
+  <div class="row">
+    <div class="col-sm-6 col-md-3">
+      <div class="card">
+        <div class="card-header">头像</div>
+        <img class="card-img-top" #headImg src="http://kanyun123.3vcm.net/touxiang.jpeg" alt="Card image cap">
+        <div class="card-body">
+          <a (click)="headModal.show()" href="javascript:void(0)" class="btn btn-primary">更换头像</a>
+        </div>
+      </div>
+
+    </div>
+    <div class="col-sm-6 col-md-6">
+      <div class="card card-default">
+        <div class="card-header">个人资料</div>
+        <div class="card-body">
+
+        </div>
       </div>
     </div>
+    <div class="col-sm-6 col-md-3">
+      <div class="card card-default">
+        <div class="card-header">好友</div>
+        <div class="card-body">
 
-  </div>
-  <div class="col-sm-6 col-md-6">
-    <div class="card card-default">
-      <div class="card-header">个人资料</div>
-      <div class="card-body">
-
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-6 col-md-3">
-    <div class="card card-default">
-      <div class="card-header">好友</div>
-      <div class="card-body">
-
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="row">
-  <div class="col-sm-6 col-md-3">
-    <div class="card card-info">
-      <div class="card-header">统计信息</div>
-      <div class="card-body">
-        card content
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-sm-6 col-md-6">
-    <div class="card card-info">
-      <div class="card-header">动态</div>
-      <div class="card-body">
-        card content
+
+
+  <div class="row">
+    <div class="col-sm-6 col-md-3">
+      <div class="card card-info">
+        <div class="card-header">统计信息</div>
+        <div class="card-body">
+          card content
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-6">
+      <div class="card card-info">
+        <div class="card-header">动态</div>
+        <div class="card-body">
+          card content
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-3">
+      <div class="card card-default">
+        <div class="card-header">最近访客</div>
+        <div class="card-body">
+
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-sm-6 col-md-3">
-    <div class="card card-default">
-      <div class="card-header">最近访客</div>
-      <div class="card-body">
-
-      </div>
-    </div>
-  </div>
-</div>
 
 
-<!--编辑头像Modal-->
-<div bsModal #headModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">编辑头像</h4>
-        <button type="button" class="close pull-right" (click)="headModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-block">
+  <!--编辑头像Modal-->
+  <div bsModal #headModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+       aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title pull-left">编辑头像</h4>
+          <button type="button" class="close pull-right" (click)="headModal.hide()" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-block">
 
-        <section class=" img-section">
+          <section class=" img-section">
 
-          <div class="z_photo upimg-div clear">
+            <div class="z_photo upimg-div clear">
 
-            <!--上传图片位置，默认显示并存在DOM中，此处为什么不用[ngStyle]，因为使用ngStyle之后，将预览图片删除后
-              重新选择图片会出现图片选不上的问题，大概原因是因为ng2FileSelect需要重新实例话，所以此处选用ngIf，解决问题-->
-            <section class="z_file fl" *ngIf='imgFlag'>
-              <img src="assets/image/upload_header_img/a11.png" class="add-img">
-              <input type="file" class="file" ng2FileSelect [uploader]="uploader" (change)="selectedFileOnChanged($event)" accept="image/*"
-              />
-            </section>
-            <!--预览图片位置,默认隐藏，原来使用的是*ngIf来控制发现会出问题，原因已在组件内说明，改用ngStyle-->
-            <section class="up-section fl" [ngStyle]="{'display':!imgFlag?'block':'none'}">
-              <span class="up-span"></span>
-              <img src="assets/image/upload_header_img/a7.png" class="close-upimg" (click)="removeImg()">
-              <img #preview src="" class="up-img">
-              <p id="aaa" class="img-name-p"></p>
-              <input id="taglocation" name="taglocation" value type="hidden" />
-              <input type="text" name="tags" id="tags" value type="hidden" />
-            </section>
-          </div>
-        </section>
+              <!--上传图片位置，默认显示并存在DOM中，此处为什么不用[ngStyle]，因为使用ngStyle之后，将预览图片删除后
+                重新选择图片会出现图片选不上的问题，大概原因是因为ng2FileSelect需要重新实例话，所以此处选用ngIf，解决问题-->
+              <section class="z_file fl" *ngIf='imgFlag'>
+                <img src="assets/image/upload_header_img/a11.png" class="add-img">
+                <input type="file" class="file" ng2FileSelect [uploader]="uploader"
+                       (change)="selectedFileOnChanged($event)" accept="image/*"
+                />
+              </section>
+              <!--预览图片位置,默认隐藏，原来使用的是*ngIf来控制发现会出问题，原因已在组件内说明，改用ngStyle-->
+              <section class="up-section fl" [ngStyle]="{'display':!imgFlag?'block':'none'}">
+                <span class="up-span"></span>
+                <img src="assets/image/upload_header_img/a7.png" class="close-upimg" (click)="removeImg()">
+                <img #preview src="" class="up-img">
+                <p id="aaa" class="img-name-p"></p>
+                <input id="taglocation" name="taglocation" value type="hidden"/>
+                <input type="text" name="tags" id="tags" value type="hidden"/>
+              </section>
+            </div>
+          </section>
 
-      </div>
-      <div class="modal-footer">
-        <button type="button" (click)="headModal.hide()" class="btn btn-default">关闭</button>
+        </div>
+        <div class="modal-footer">
+          <button type="button" (click)="headModal.hide()" class="btn btn-default">关闭</button>
 
-        <button type="button" (click)="uploadFile()" class="btn btn-primary">上传头像</button>
+          <button type="button" (click)="uploadFile()" class="btn btn-primary">上传头像</button>
+        </div>
       </div>
     </div>
   </div>
