--- a/src/app/manager/itemmanager/updExam/upd-exam.component.html
+++ b/src/app/manager/itemmanager/updExam/upd-exam.component.html
@@ -18,6 +18,8 @@
       <button type="submit" class="btn btn-outline-default ml-4">搜索</button>
 </form>
 
+<div class="table-responsive">
+
 <table class="table table-striped">
   <thead>
   <tr>
@@ -51,7 +53,7 @@
   </tr>
   </tbody>
 </table>
-
+</div>
 
 <!--分页DOM-->
 <div class="paging_column_flex">
