--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -39,7 +39,7 @@
             <span class="nav-text">
               <label for="item_total" class="checkbox_label">试题管理</label>
             </span>
-            <i class="fa fa-angle-right"></i>
+            <i class="fa fa-angle-right arrow"></i>
           </a>
         </li>
 
