--- a/src/app/manager/user/upd-user/upd-user.component.html
+++ b/src/app/manager/user/upd-user/upd-user.component.html
@@ -1,61 +1,63 @@
-<form class="form-inline" #searchForm="ngForm" (ngSubmit)="getUserList()">
-  <div class="form-group">
-    <label for="userName" class="col-auto col-form-label">用户名</label>
-    <input type="text"  [(ngModel)]="cpaUserDto.userName" class="form-control ml-sm-2" id="userName" name="userName"
-           placeholder="输入要搜索用户名">
+
+<form>
+  <div class="form-row align-items-center">
+    <div class="form-group col-md-4">
+      <label for="registerDate">注册时间</label>
+      <input type="text" class="form-control" id="registerDate" [minDate]="registerMinDate" [maxDate]="registerMaxDate" [bsConfig]="bsConfig"
+        bsDaterangepicker [(ngModel)]="registerDaterangepickerModel" name="registerDaterangepickerModel" placeholder="注册时间">
+    </div>
+    <div class="form-group col-md-4">
+      <label for="lastLoginDate">最后一次登录时间</label>
+      <input type="text" class="form-control" id="lastLoginDate" placeholder="注册时间" [minDate]="lastLoginMinDate" [maxDate]="lastLoginMaxDate"
+        bsDaterangepicker [(ngModel)]="lastLoginDaterangepickerModel" name="lastLoginDaterangepickerModel">
+    </div>
+    <div class="form-group col-md-4">
+        <label for="userName">用户名</label>
+        <input type="text" class="form-control" id="userName" [(ngModel)]="cpaUserDto.userName" name="userName" placeholder="输入要搜索用户名">
+    </div> 
   </div>
-  <div class="form-group">
-    <label for="" class="col-auto col-form-label">注册时间</label>
-    <input type="text" class="form-control" placeholder="注册时间" [minDate]="registerMinDate"
-           [maxDate]="registerMaxDate" [bsConfig]="bsConfig" bsDaterangepicker
-           [(ngModel)]="registerDaterangepickerModel"
-           name="registerDaterangepickerModel"/>
-  </div>
-  <div class="form-group">
-    <label for="" class="col-auto col-form-label">最后一次登录时间</label>
-    <input type="text" class="form-control" placeholder="注册时间" [minDate]="lastLoginMinDate"
-           [maxDate]="lastLoginMaxDate" bsDaterangepicker [(ngModel)]="lastLoginDaterangepickerModel"
-           name="lastLoginDaterangepickerModel"/>
-  </div>
-  <button type="submit" class="btn btn-outline-info">搜索</button>
+  <button type="submit" class="btn btn-outline-info ml-sm-3 float-right">搜索</button>
+      
+
+
 </form>
 
 <div class="table-responsive">
   <table class="table table-striped">
     <thead>
-    <tr>
-      <th>#</th>
-      <th>用户名</th>
-      <th>注册时间</th>
-      <th>上次登录时间</th>
-      <th>级别</th>
-      <th>操作</th>
-    </tr>
+      <tr>
+        <th>#</th>
+        <th>用户名</th>
+        <th>注册时间</th>
+        <th>上次登录时间</th>
+        <th>级别</th>
+        <th>操作</th>
+      </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let item of userDtos;let i = index">
-      <td>{{i+1}}</td>
-      <td>
-        {{item.userName}}
-      </td>
-      <td>{{item.regDate}}</td>
-      <td>{{item.lastLoginDate}}</td>
-      <td>{{item.insertDate}}</td>
-      <!--用户ID-->
-      <!--<td>{{item.id}}</td>-->
-      <td #idUser abbr="{{item.id}}">
-        <a href="javascript:void(0)" (click)="getUserDetail(idUser)">修改</a>
-        <a href="javascript:void(0)" (click)="delUserTip(idUser)">删除</a>
-      </td>
+      <tr *ngFor="let item of userDtos;let i = index">
+        <td>{{i+1}}</td>
+        <td>
+          {{item.userName}}
+        </td>
+        <td>{{item.regDate}}</td>
+        <td>{{item.lastLoginDate}}</td>
+        <td>{{item.insertDate}}</td>
+        <!--用户ID-->
+        <!--<td>{{item.id}}</td>-->
+        <td #idUser abbr="{{item.id}}">
+          <a href="javascript:void(0)" (click)="getUserDetail(idUser)">修改</a>
+          <a href="javascript:void(0)" (click)="delUserTip(idUser)">删除</a>
+        </td>
 
-    </tr>
+      </tr>
     </tbody>
   </table>
 </div>
 
 <!--修改用户Model-->
-<div *ngIf="isModalShown" [config]="{ show: true }" bsModal #updUserModal="bs-modal"
-     class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+<div *ngIf="isModalShown" [config]="{ show: true }" bsModal #updUserModal="bs-modal" class="modal fade" tabindex="-1" role="dialog"
+  aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
@@ -65,7 +67,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <form class="form-horizontal" role="form" #updUserForm="ngForm" >
+        <form class="form-horizontal" role="form" #updUserForm="ngForm">
           <div class="form-group">
             <div class="col-md-5">
               <div class="input-group">
@@ -87,10 +89,10 @@
             <div class="col-md-5">
               <label class="radio-inline">
                 <!--如果双向绑定的是Number类型的值,则value需要写成[value],否则无法自动选中-->
-                <input name="gender" type="radio" [value]="1"  [(ngModel)]="cpaUserDto.gender"> 男
+                <input name="gender" type="radio" [value]="1" [(ngModel)]="cpaUserDto.gender"> 男
               </label>
               <label class="radio-inline">
-                <input name="gender" type="radio" [value]="0"  [(ngModel)]="cpaUserDto.gender"> 女
+                <input name="gender" type="radio" [value]="0" [(ngModel)]="cpaUserDto.gender"> 女
               </label>
             </div>
           </div>
