--- a/src/app/manager/itemmanager/addExam/add-exam.component.html
+++ b/src/app/manager/itemmanager/addExam/add-exam.component.html
@@ -134,7 +134,7 @@
           <label class="custom-control-label" for="checkboxA">A</label>
         </div>
         <div class="custom-control custom-checkbox custom-control-inline">
-          <input type="checkbox" class="custom-control-input" (click)="selectCheckbox($event.target.checked,'A')" value="B" name="result"
+          <input type="checkbox" class="custom-control-input" (click)="selectCheckbox($event.target.checked,'B')" value="B" name="result"
             id="checkboxB">
           <label class="custom-control-label" for="checkboxB">B</label>
         </div>
